[workspace]
members = ["ackerman", "dbg_target", "fork-test", "linz", "parser-combinator", "regex", "zerodbg", "zerosh"]

[workspace.package]
version = "0.1.0"
authors = ["Katsutoshi Itoh"]
description = "Learning rust from zero"
documentation = "https://www.amazon.co.jp/dp/4065301955"
edition = "2021"
