[package]
name = "zerodbg"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
rustyline = "13.0"
nix = { version = "0.27", features = ["ptrace", "personality"] }
