[package]
name = "zerosh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.0"
env_logger = "0.10.1"
log = "0.4.20"
nix = "0.25"
rustyline = "13.0"
signal-hook = "0.3.17"

parser-combinator = { path = "../parser-combinator", version = "0.1.0" }

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"
