[package]
name = "zerosh"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.1"
env_logger = "0.11.8"
log = "0.4.29"
nix = "0.29"
rustyline = "14.0"
signal-hook = "0.3.18"

parser-combinator = { path = "../parser-combinator", version = "0.1.0" }
